--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^12.0.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0"
   }
