--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0"
   }
