--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
