--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
+    "req-flash": "0.0.3",
     "sequelize": "^6.13.0"
   }
 }
